# publicsuffix-haskell

./: .gitignore  .travis.yml  README.md  publicsuffix.cabal  shell.nix
benchmark/: Benchmark.hs
script/: bootstrap  bump
src/Data/: PublicSuffix.hs
src/Data/PublicSuffix/: Rules.hs  TH.hs  Types.hs
test/: Test.hs
