name:                publicsuffix
version:             0.20150507

synopsis:            The publicsuffix list exposed as proper Haskell types
description:
    This package contains a parsed representation of the publicsuffix list,
    and functions which you can use to query it.
    .
    The package version follows the template @\<api version\>.\<date\>@ where
    @date@ is when the publicsuffix list was last updated from upstream, in the
    format @YYYYMMDD@.

homepage:            https://github.com/wereHamster/publicsuffix-haskell/

license:             MIT
license-file:        LICENSE

author:              Tomas Carnecky
maintainer:          tomas.carnecky@gmail.com

category:            Data
build-type:          Simple
cabal-version:       >=1.10


extra-source-files:
  src/Data/PublicSuffix/public_suffix_list.dat


source-repository head
  type:     git
  location: git://github.com/wereHamster/publicsuffix-haskell.git


library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

  build-depends:
     base >=4 && <4.9
   , filepath
   , template-haskell
   , bytestring
   , text

  exposed-modules:
     Data.PublicSuffix
   , Data.PublicSuffix.Rules

  other-modules:
     Data.PublicSuffix.Types
   , Data.PublicSuffix.TH


test-suite spec
  hs-source-dirs:      test
  default-language:    Haskell2010

  type:                exitcode-stdio-1.0
  main-is:             Test.hs

  build-depends:
     base >=4 && <4.9
   , publicsuffix

   , text
   , hspec


benchmark bench
  default-language: Haskell2010
  hs-source-dirs:   benchmark

  type:             exitcode-stdio-1.0
  main-is:          Benchmark.hs

  build-depends:
     base
   , criterion
   , random
   , publicsuffix

  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  ghc-prof-options: "-with-rtsopts=-p -s -h -i0.1 -N"
